# Timer

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2_ttf.cmake
src/: app.cpp  app.hpp  coord.hpp  input.cpp  input.hpp  main.c  main.cpp  object.cpp  object.hpp  renderer.cpp  renderer.hpp  segfile.cpp  segfile.hpp  segment.cpp  segment.hpp  text.cpp  text.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
